Fixing element spacing and input value

--- a/style-todo.css
+++ b/style-todo.css
@@ -10,15 +10,17 @@ body {
   background: #064DA7;
 }
 .container {
-  width: 40%;
-  min-width: 450px;
-  position: relative;
-  min-height: 100px;
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
+  width: 90%;
+  max-width: 450px;
+  /* position: relative; */
+  /* min-height: 100px; */
+  /* transform: translate(-50%, -50%); */
+  /* top: 50%; */
+  /* left: 50%; */
+  margin: 100px auto;
   background: #d8e6fa;
   border-radius: 10px;
+  
 }
 #newtask {
   position: relative;
@@ -67,7 +69,7 @@ body {
   width: 100%;
   position: relative;
   overflow: scroll;
-  max-height: 450px;
+  max-height: 350px;
 }
 
 .task {
